--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,19 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #jpa end
 
+#mybatis
+mybatis.type-aliases-package=pers.msidolphin.mblog.object.po
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#mapper
+#mappers 多个接口时逗号隔开
+mapper.mappers=pers.msidolphin.mblog.model.mapper.ArticleMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
