--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,12 @@
 			<version>1.2.3</version>
 		</dependency>
 
+		<!--spring2.0集成redis所需common-pool2-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.4.2</version>
+		</dependency>
 
 	</dependencies>
 
