--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,24 @@ pagehelper.params=count=countSql
 
 restart.include.mapper=/mapper-[\\w-\\.]+jar
 restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
+
+# redis start
+# redis 数据库索引 默认为0
+spring.redis.database=0
+# redis 服务器地址
+spring.redis.host=127.0.0.1
+# redis 服务器端口
+spring.redis.port=6379
+# redis 密码 默认为空
+spring.redis.password=
+# redis 连接池最大连接数 负值表示没有限制
+spring.redis.jedis.pool.max-wait=100
+# 连接池最大阻塞等待时间 负值表示没有限制
+spring.redis.jedis.pool.max-active=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=2
+# 连接超时时间
+spring.redis.timeout=5000
+# redis end
