自动生成头像，ftp工具类，图像上传提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,14 @@ spring.redis.jedis.pool.min-idle=2
 # 连接超时时间
 spring.redis.timeout=5000
 # redis end
+
+# fast dfs start
+fdfs.web-server-url=http://192.168.112.136
+fdfs.soTimeout=1500
+fdfs.connectTimeout=600
+fdfs.thumbImage.width=150
+fdfs.thumbImage.height=150
+fdfs.trackerList[0]=192.168.112.136:22122
+# fast dfs end
+
+spring.jmx.enabled= false
