--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -2,3 +2,7 @@
 blog.article.ip.cache.prefix=articleViewsCache:
 # 浏览量标记有效时间
 blog.article.ip.cache.timeout=900000
+
+# 文件上传的临时目录
+blog.upload.tmpdir=upload/
+blog.upload.ftp.dir=F:images/
