'与前端评论模块联调...'

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -9,3 +9,6 @@ blog.upload.ftp.dir=F:images/
 
 blog.user.session.key=sessionToken
 blog.user.session,timeout=259200000
+
+# Í¼Æ¬·şÎñÆ÷µØÖ·
+blog.image.server=http://localhost:8089/
