--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -8,6 +8,8 @@ blog.upload.tmpdir=upload/
 blog.upload.ftp.dir=F:images/
 
 blog.user.session.key=sessionToken
+blog.admin.user.token.key=access_token
+blog.admin.user.token.timeout=259200000
 blog.user.session,timeout=259200000
 
 # Í¼Æ¬·şÎñÆ÷µØÖ·
