'完成个人信息模块'

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -8,9 +8,13 @@ blog.upload.tmpdir=upload/
 blog.upload.ftp.dir=F:images/
 
 blog.user.session.key=sessionToken
-blog.admin.user.token.key=access_token
+blog.admin.user.token.key=admin_access_token
 blog.admin.user.token.timeout=259200000
 blog.user.session,timeout=259200000
 
 # 图片服务器地址
 blog.image.server=http://localhost:8089/
+
+# cookie相关
+blog.cookie.path=/
+blog.cookie.domain=localhost
