'完成前台配置接口'

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -18,3 +18,13 @@ blog.image.server=http://localhost:8089/
 # cookie相关
 blog.cookie.path=/
 blog.cookie.domain=localhost
+
+# 前台配置相关
+blog.portal.site.header.title.key=PORTAL_TITLE
+blog.portal.site.header.background.key=PORTAL_BACKGROUND
+blog.portal.site.header.avatar.key=PORTAL_AVATAR
+blog.portal.site.footer.copyright.icp.key=ICP
+blog.portal.site.footer.copyright.copyright.key=COPYRIGHT
+blog.portal.site.footer.designed_by.key=DESIGNED_BY
+blog.portal.site.footer.site.key=SITE
+blog.portal.site.footer.contract.mail.key=CONTRACT_EMAIL
