--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,36 +49,30 @@ restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 
 # redis start
 # redis 数据库索引 默认为0
-spring.redis.database=0
+# spring.redis.database=0
 # redis 服务器地址
-spring.redis.host=127.0.0.1
+# spring.redis.host=127.0.0.1
 # redis 服务器端口
-spring.redis.port=6379
+# spring.redis.port=6379
 # redis 密码 默认为空
-spring.redis.password=
+# spring.redis.password=
 # redis 连接池最大连接数 负值表示没有限制
-spring.redis.jedis.pool.max-wait=100
+# spring.redis.jedis.pool.max-wait=100
 # 连接池最大阻塞等待时间 负值表示没有限制
-spring.redis.jedis.pool.max-active=-1
+# spring.redis.jedis.pool.max-active=-1
 # 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle=10
+# spring.redis.jedis.pool.max-idle=10
 # 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle=2
+# spring.redis.jedis.pool.min-idle=2
 # 连接超时时间
-spring.redis.timeout=5000
+# spring.redis.timeout=5000
 # redis end
-
-# fast dfs start
-fdfs.web-server-url=http://192.168.112.136
-fdfs.soTimeout=1500
-fdfs.connectTimeout=600
-fdfs.thumbImage.width=150
-fdfs.thumbImage.height=150
-fdfs.trackerList[0]=192.168.112.136:22122
-# fast dfs end
 
 spring.jmx.enabled= false
 
 # 文件上传
 spring.servlet.multipart.max-file-size=200Mb    
 spring.servlet.multipart.max-request-size=200Mb   
+
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
