'完成文章索引构建逻辑'

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -28,3 +28,6 @@ blog.portal.site.footer.copyright.copyright.key=COPYRIGHT
 blog.portal.site.footer.designed_by.key=DESIGNED_BY
 blog.portal.site.footer.site.key=SITE
 blog.portal.site.footer.contract.mail.key=CONTRACT_EMAIL
+
+# Elasticsearch≈‰÷√
+elasticsearch.cluster.name=elastic
